# ore-desktop-app

./: .gitignore  Cargo.toml  README.md  config.toml.example
src/: events.rs  main.rs  ore_utils.rs  tasks.rs  utils.rs
src/ui/: components.rs  layout.rs  layout_nodes.rs  mod.rs  nav_item_systems.rs  screens.rs  spawn_utils.rs  styles.rs  systems.rs  ui_button_systems.rs  ui_sync_systems.rs  ui_systems.rs
src/ui/screens/: mod.rs  screen_base.rs  screen_dashboard.rs  screen_despawners.rs  screen_initial_setup.rs  screen_locked.rs  screen_mining.rs  screen_settings_config.rs  screen_settings_general.rs  screen_settings_wallet.rs  screen_setup_wallet.rs
