[package]
name = "ore-desktop-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.13.2", features = ["webp"] }
bevy-inspector-egui = "0.24.0"
# Using cocoon 0.3.1 because solana-sdk dependency curve25519-dalek has pinned zeroize version >=1 to <1.4, where cocoon 0.3.2 and after use zeroize >1.5
cocoon = "=0.3.1"
copypasta = "0.10.1"
serde = "1.0.199"
ore-api = "2.0.0-beta.3"
ore-utils = "2.0.0-beta.2"
drillx = "2.0.0-beta.1"
solana-client = "1.18.12"
solana-sdk = "1.18.12"
spl-token = { version = "^4", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^2.2", features = [ "no-entrypoint" ] }
toml = "0.8.12"
solana-program = "1.18.12"
solana-transaction-status = "1.18.12"
chrono = "0.4.38"
sysinfo = "0.30.11"
bincode = "1.3.3"
tiny-bip39 = "0.8.2"
open = "5.1.2"
async-compat = "0.2.3"
crossbeam-channel = "0.5.12"
solana-account-decoder = "1.18.13"
async-std = "1.12.0"
